# best-value-recommendation-system

./: .env.example  .gitignore  Makefile  README.md  plan.md  pyproject.toml  requirements.txt
data/: enhanced_fakestore_products.csv
evaluation/: assignment_checklist.md  baseline_vs_improved.md  benchmark_queries.jsonl  metrics_report.txt  metrics_summary.json  qrels.jsonl  queries.json  sample_qa.txt  sample_results.json
src/app/: __init__.py  __main__.py  api.py  config.py  embeddings.py  evaluation.py  explainer.py  genai.py  normalization.py  pipeline.py  query_parser.py  ranking.py  recommend.py  retrieval.py  types.py
tests/: fixtures.py  test_api.py  test_embeddings.py  test_evaluation_metrics.py  test_genai.py  test_pipeline.py  test_pipeline_fallback.py  test_pipeline_rerank.py  test_query_parser.py  test_ranking.py  test_retrieval.py  test_retrieval_semantic.py
